<resources>
    <string name="app_name">Contactos</string>
    <string name="titulo_nuevo">Nuevo contacto</string>
    <string name="titulo_switch">Cambiar vista</string>
    <string name="titulo_search">Buscar contacto</string>

    <string name="titulo_edad">Edad</string>
    <string name="titulo_peso">Peso</string>
    <string name="titulo_telefono">Telefono</string>
    <string name="titulo_email">Email</string>
    <string name="titulo_direccion">Dirección</string>
    <string name="titulo_eliminar_contacto">Eliminar Contacto</string>
    <string name="titulo_editar_contacto">Editar Contacto</string>
</resources>